tests/fixtures/positive/comments/OutdatedDocumentation.kt
package comments

class Example {
    /**
     * Processes the input.
     * @param x the input value
     */
    fun process(y: Int): Int {
        return y * 2
    }
}
